--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -128,7 +128,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/buttonPrevious"
                 android:layout_width="match_parent"
                 android:layout_height="125dp"
                 android:layout_marginRight="10dp"
